cimmit con nuevo logo

--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
          </video>
          <div class="content" style="text-transform: uppercase;">
              <div class="container text-center" style="margin-top: 300px;">
-                 <img src="images/bruandylogo1.png" class="img img-fluid">
-                 <h1 style="color: rgb(44, 132, 247); font-style: bold;">Mobile Software</h1>
-                 <h4 style="color: rgb(44, 132, 247); font-style: bold;"> Conoce lo que hacemos</h4>
+                 <img src="images/bruandylogo1.png" class="img img-fluid mb-5">
              </div>
          </div>
      </div>
@@ -136,7 +134,7 @@
                <div class="col-md-12">
                   <div class="web_hosting">
                      <figure><img  src="images/web2.jpg" alt="#"/></figure>
-                     <p>En Bruandy.com somo especialistas en la solucion de cuestiones infomaticas encaminadas a darle solucion a problemas integrales </p>
+                     <p>En Bruandy.com somos especialistas en la solucion de cuestiones infomaticas encaminadas a darle solucion a problemas integrales </p>
                      <a href="#" class="rounded_buttons">Leer +</a>
                   </div>
                </div>
